<resources>
    <string name="app_name">X桌面助手</string>
    <string name="t9_search">T9搜索</string>
    <string name="qwerty_search">全键盘搜索</string>
    <string name="data_count">(%d)</string>
    <string name="click_top_tab_swich_search_mode">点击顶部标签可切换搜索模式</string>
    <string name="search_mode_swich_tips">点击标签切换搜索模式</string>
    <string name="app_operation_tips">点击图标打开应用\n长按图标进行更多操作</string>
    <string name="menu_operation_tips">左/右滑动显示菜单</string>
    <string name="search_input_prompt">输入应用名称</string>
    <string name="app_info_loading">应用信息加载中...</string>
    <string name="no_match_search_result">无相关搜索结果</string>
    <string name="app_can_not_be_launched_directly">该应用无法被直接启动</string>
    <string name="the_app_has_been_launched">该应用已经打开</string>
    <string name="can_not_to_uninstall_yourself">无法卸载自己</string>
    <string name="set_to_top">置顶</string>
    <string name="set_to_top_success">%s已置顶</string>
    <string name="set_to_top_failed">%s置顶失败</string>
    <string name="reset_sequence">顺序复位</string>
    <string name="reset_sequence_success">%s顺序复位成功</string>
    <string name="reset_sequence_failed">%s顺序复位失败</string>
    <string name="uninstall">卸载</string>
    <string name="view_app_info">查看应用信息</string>
    <string name="share_app">分享应用</string>
    <string name="share_qr_code">分享二维码</string>
    <string name="x_desktop_helper_download_link">X桌面助手下载链接</string>
    <string name="app_function">X桌面助手是一款智能、高效、简洁的桌面应用搜索工具.\n让用户快速、准确找到桌面上的应用,进行打开,分享,卸载，查看应用信息等一系列操作.</string>

    <!-- start: exit_app_prompt_mode -->
    <string name="whether_prompt_exit_app">退出应用时是否提示</string>
    <string name="double_back_press_exit_app">再按一次退出%s</string>
    <!-- end: exit_app_prompt_mode -->


    <!-- start:home page -->

    <string name="home_page">主页</string>
    <!-- end: home page -->

    <!-- start: tool -->
    <string name="tool">工具</string>
    <string name="scan_code">扫一扫</string>
    <string name="qr_code_generator">二维码生成器</string>
    <string name="generate_qr_code">生成二维码</string>
    <string name="view_qr_code_image">查看二维码图片</string>
    <string name="qr_code_input_tips">请输入需要生成的二维码内容</string>
    <string name="qr_code_content_can_not_be_empty">二维码内容不能为空!</string>
    <string name="generate_qr_code_success">生成二维码成功!</string>
    <string name="generate_qr_code_failed">生成二维码失败!</string>
    <string name="scan_code_content">扫码内容</string>
    <string name="cancel_scan">取消扫描</string>
    <string name="copy">复制</string>
    <string name="paste">粘贴</string>
    <string name="copy_content_success">复制\"%s\"成功</string>
    <string name="copy_content_is_empty">复制内容为空</string>
    <string name="share_content_can_not_be_empty">分享内容不能为空</string>
    <!-- end: tool -->

    <!-- start: settings -->
    <string name="settings">设置</string>
    <!-- start: reside_menu_position -->
    <string name="reside_menu_position">菜单位置</string>
    <string name="left">左边</string>
    <string name="right">右边</string>
    <string name="app_restart_to_take_effect">应用重启后生效</string>
    <!-- end: reside_menu_position -->


    <!-- start: search_mode -->

    <string name="search_mode">搜索方式</string>
    <string name="t9">T9</string>
    <string name="qwerty">全键盘</string>

    <!-- end: search_mode -->
    <string name="search_data_count_show">搜索数据数量显示</string>
    <string name="app_share_show">应用分享显示</string>
    <string name="one_key_reset_sequence">一键顺序复位</string>
    <string name="sure_to_one_key_reset_sequence">确定一键顺序复位?</string>
    <string name="one_key_reset_sequence_success">一键顺序复位成功</string>
    <string name="one_key_reset_sequence_failed">一键顺序复位失敗</string>
    <string name="voice_search_enable">语音搜索启用</string>
    <string name="voice_start_app">语音启动应用</string>
    <string name="enter_app_start_voice_search">进入应用启动语音搜索</string>
    <string name="enter_app_start_voice_search_tips">如果录音无法正常使用,请点击左侧,查看该应用是否已获取录音权限!</string>
    <string name="smart_sorting">智能排序</string>
    <string name="floating_window_show">悬浮窗显示</string>
    <string name="floating_window_show_tips">如果悬浮窗未显示,请点击左侧,查看该应用是否已获取悬浮窗显示权限!</string>
    <!-- end: settings -->
    <!-- start: about -->
    <string name="about">关于</string>
    <string name="version_name">版本信息</string>
    <string name="colon">:</string>
    <string name="project_address_prompt">项目地址</string>
    <string name="project_address">https://github.com/handsomezhou/XDesktopHelper</string>
    <string name="author_prompt">作者</string>
    <string name="author">handsomezhou</string>
    <string name="contact_prompt">联系方式</string>
    <string name="email">quanjunzhou@gmail.com</string>
    <string name="github_home_prompt">Github主页</string>
    <string name="github_home">https://github.com/handsomezhou/</string>
    <!-- end: about -->
    <!-- start: reference project -->
    <string name="reference_project">引用项目</string>
    <!-- end: reference project -->


    <!-- start: long_press_uninstall_app -->
    <string name="long_press_uninstall_app">长按卸载应用</string>
    <!-- end: long_press_uninstall_app -->

    <!-- start: long_press_uninstall_app -->
    <string name="i_can_not_understand_your_words">我不能理解你的话[%s]!</string>
    <string name="no_related_app_can_be_uninstalled">无[%s]应用可以卸载!</string>
    <string name="no_related_app_can_be_opened">无[%s]应用可以打开!</string>
    <!-- end: long_press_uninstall_app -->


    <!-- Start: common dialog -->
    <string name="common_ok">确定</string>
    <string name="common_cancel">取消</string>
    <!-- End: common dialog -->

    <!-- start: share -->
    <string name="share">分享</string>
    <string name="please_select">请选择</string>
    <string name="wechat_not_installed">未安装微信,请先安装微信</string>
    <string name="qq_not_installed">未安装QQ</string>
    <string name="tencent_micro_bo_not_installed">未安装腾讯微博</string>
    <string name="sina_micro_bo_not_installed">未安装新浪微博</string>
    <string name="copy_email_success">邮箱已复制.</string>
    <string name="copy_qq_group_success">QQ群号已复制,可打开QQ添加群.</string>
    <string name="copy_wechat_public_number_success">微信公众号已复制,可打开微信进行关注.</string>
    <string name="copy_weibo_success">新浪微博帐号已复制,可打开新浪微博进行关注.</string>
    <!-- end: share -->

    <!--start:xfyun-->
    <string name="record_audio_permission">录音权限</string>
    <string name="system_alert_window_permission">悬浮窗权限</string>
    <string name="pref_key_iat_show">iat_show</string>
    <string name="text_begin">请开始说话…</string>
    <!--start:Error of Android&Java -->
    <!-- 20001-->
    <string name="error_no_network">找不到网络哦</string>
    <!--20002-->
    <string name="error_network_timeout">网络不给力啊</string>
    <!--20003-->
    <string name="error_net_expection">网络出问题了</string>
    <!--20004-->
    <string name="error_invalid_result">无有效的结果</string>
    <!--20005-->
    <string name="error_no_match">无匹配结果</string>
    <!--20006-->
    <string name="error_audio_record">录音失败,请授予该应用录音权限</string>
    <!--20007-->
    <string name="error_no_sppech">未检测到语音</string>
    <!--20008-->
    <string name="error_speech_timeout">音频输入超时</string>
    <!--20009-->
    <string name="error_empty_utterance">无效的文本输入</string>
    <!--20010-->
    <string name="error_file_access">文件读写失败</string>
    <!--20011-->
    <string name="error_play_media">音频播放失败</string>
    <!--20012-->
    <string name="error_invalid_param">无效的参数</string>
    <!--20013-->
    <string name="error_text_overflow">文本溢出</string>
    <!--20014-->
    <string name="error_invalid_data">无效数据</string>
    <!--20015-->
    <string name="error_login">用户未登陆</string>
    <!--20016-->
    <string name="error_permission_denied">无效授权</string>
    <!--20017-->
    <string name="error_interrupt">被异常打断</string>
    <!--20019-->
    <string name="error_invalid_encoding">无效的编码</string>
    <!--20020-->
    <string name="error_memory_wraning">内存不足</string>
    <!--20999-->
    <string name="error_unknown">未知错误</string>
    <!--21001-->
    <string name="error_component_not_installed">没有安装语音组件</string>
    <!--21002-->
    <string name="error_engine_not_supported">引擎不支持</string>
    <!--21003-->
    <string name="error_engine_init_fail">初始化失败</string>
    <!--21004-->
    <string name="error_engine_call_fail">调用失败</string>
    <!--21005-->
    <string name="error_engine_busy">引擎繁忙</string>
    <!--22001-->
    <string name="error_local_no_init">本地引擎未初始化</string>
    <!--22002-->
    <string name="error_local_resource">本地引擎无资源</string>
    <!--22003-->
    <string name="error_local_engine">本地引擎内部错误</string>
    <!--22004-->
    <string name="error_ivw_interrupt">本地唤醒引擎被异常打断</string>
    <!--22005-->
    <string name="error_version_lower">版本过低</string>
    <!--end:Error of Android&Java -->
    <!--start:xfyun-->
</resources>
